# gecko-om

./: CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gecko/: __init__.py  exceptions.py
gecko/index/: __init__.py
gecko/model/: models.py
tests/: conftest.py  test_index.py  test_setup.py
